--- a/ERPWeb/Views/AgroConfiguration/CreateZonelist.cshtml
+++ b/ERPWeb/Views/AgroConfiguration/CreateZonelist.cshtml
@@ -32,7 +32,7 @@
             <div class="row " style="margin-top:-18px;">
 
                 <div class="col-md-2">
-                    <label for="ddlZoneName" class="control-label">ZoneName</label>
+                    <label for="ddlZoneName" class="control-label">ZoneName<span style="color:red">*</span></label>
                     <input type="text" id="ddlZoneName" class="form-control form-control-sm" />
                     <span class="error hide required-ZoneName font-weight-bold">Input Zone Name!</span>
                     <span class="error hide duplicate-ZoneName font-weight-bold">Already ZoneName Exist!</span>
