--- a/ERPWeb/Views/AgroConfiguration/CreateRegionlist.cshtml
+++ b/ERPWeb/Views/AgroConfiguration/CreateRegionlist.cshtml
@@ -36,15 +36,15 @@
 
 
                 <div class="col-md-2">
-                    <label for="ddldivname" class="control-label">DivisionName</label>
-                    @Html.DropDownList("ddldivname", (IEnumerable<SelectListItem>)ViewBag.ddldivname, "Select Division Name", new { @class = "form-control form-control-sm ctrl-changed select2 select2-danger" })
+                    <label for="ddldivname" class="control-label">DivisionName<span style="color:red">*</span></label>
+                    @Html.DropDownList("ddldivname", (IEnumerable<SelectListItem>)ViewBag.ddldivname, "Select Division Name", new { @class = "form-control form-control-sm ctrl-changed select2 select2-danger", autofocus = "autofocus" })
                     <span class="error hide required-DivisionName font-weight-bold">Input DivisionName!</span>
 
                 </div>
 
 
                 <div class="col-md-2">
-                    <label for="ddlRegionName" class="control-label">RegionName</label>
+                    <label for="ddlRegionName" class="control-label">RegionName<span style="color:red">*</span></label>
                     <input type="text" id="ddlRegionName" class="form-control form-control-sm" />
                     <span class="error hide required-RegionName font-weight-bold">Input Region Name!</span>
                     <span class="error hide required-RegionName font-weight-bold">Already RegionName Exist!</span>
