--- a/ERPWeb/Views/AgroConfiguration/CreateTerritorylist.cshtml
+++ b/ERPWeb/Views/AgroConfiguration/CreateTerritorylist.cshtml
@@ -35,14 +35,14 @@
             <div class="row " style="margin-top:-18px;">
 
                 <div class="col-md-2">
-                    <label for="ddlareaname" class="control-label">AreaName</label>
+                    <label for="ddlareaname" class="control-label">AreaName<span style="color:red">*</span></label>
                     @Html.DropDownList("ddlareaname", (IEnumerable<SelectListItem>)ViewBag.ddlareaname, "Select Area Name", new { @class = "form-control form-control-sm ctrl-changed select2 select2-danger",autofocus = "autofocus" })
                     <span class="error hide required-AreaName font-weight-bold">Input AreaName!</span>
                 </div>
 
 
                 <div class="col-md-2">
-                    <label for="ddlTerritoryName" class="control-label">TerritoryName</label>
+                    <label for="ddlTerritoryName" class="control-label">TerritoryName<span style="color:red">*</span></label>
                     <input type="text" id="ddlTerritoryName" class="form-control form-control-sm" />
                     <span class="error hide required-TerritoryName font-weight-bold">Input Territory Name!</span>
                     <span class="error hide required-TerritoryName font-weight-bold">Already TerritoryName Exist!</span>
