--- a/ERPWeb/Views/AgroConfiguration/GetAgroUnitList.cshtml
+++ b/ERPWeb/Views/AgroConfiguration/GetAgroUnitList.cshtml
@@ -10,19 +10,26 @@
     <div class="col-md-12">
 
         <div class="row" style="margin-top:-15px">
-            <div class="col-md-12">
+            <div class="col-md-12"style="height:60px;text-align:center">
                 <div class="card card-navy">
                     <div class="card-header">
                         <div class="row">
+                            <div class="col-md-2">
+                                <h5 class=" text-bold float-left">
+                                    Unit Setup
+                                </h5>
+                            </div>
+                            <div class="col-md-2">
+
+                            </div>
                             <div class="col-md-3 float-left">
                                 <input type="text" class="form-control form-control-sm" id="searchByAny" placeholder="Search by any" />
 
                             </div>
-                            <div class="col-md-6">
-                                <h5 class="text-center text-bold">
-                                    Unit Setup
-                                </h5>
+                            <div class="col-md-2">
+
                             </div>
+
                             <div class="col-md-3">
                                 <button class="btn btn-outline-warning btn-flat btn-sm float-right" id="addButton"><i class="fa fa-plus"></i> Create New Unit</button>
                             </div>
