--- a/ERPWeb/Views/AgroConfiguration/GetArealist.cshtml
+++ b/ERPWeb/Views/AgroConfiguration/GetArealist.cshtml
@@ -40,14 +40,14 @@
 
 
                 <div class="col-md-2">
-                    <label for="ddlRegionname" class="control-label">RegionName</label>
-                    @Html.DropDownList("ddlRegionname", (IEnumerable<SelectListItem>)ViewBag.ddlRegionname, "Select Region Name", new { @class = "form-control form-control-sm ctrl-changed select2 select2-danger" })
+                    <label for="ddlRegionname" class="control-label">RegionName<span style="color:red">*</span></label>
+                    @Html.DropDownList("ddlRegionname", (IEnumerable<SelectListItem>)ViewBag.ddlRegionname, "Select Region Name", new { @class = "form-control form-control-sm ctrl-changed select2 select2-danger",autofocus="autofocus" })
                     <span class="error hide required-RegionName font-weight-bold">Input RegionName!</span>
 
 
                 </div>
                 <div class="col-md-2">
-                    <label for="ddlAreaName" class="control-label">AreaName</label>
+                    <label for="ddlAreaName" class="control-label">AreaName<span style="color:red">*</span></label>
                     <input type="text" id="ddlAreaName" class="form-control form-control-sm" />
                     <span class="error hide required-AreaName font-weight-bold">Input Area Name!</span>
                     <span class="error hide duplicate-AreaName font-weight-bold">Already AreaName Exist!</span>
