--- a/ERPWeb/Views/AgroConfiguration/GetPRawmaterialStockList.cshtml
+++ b/ERPWeb/Views/AgroConfiguration/GetPRawmaterialStockList.cshtml
@@ -146,8 +146,8 @@
                                                 <div class="row justify-content-center">
 
                                                     <div class="col-md-3">
-                                                        <label for="ddlSupplierName" class="control-label">Supplier Name</label>
-                                                        @Html.DropDownList("ddlSupplierName", (IEnumerable<SelectListItem>)ViewBag.ddlSupplierName, "--Select Supplier--", new { @class = "form-control form-control-sm ctrl-changed select2 select2-danger"})
+                                                        <label for="ddlSupplierName" class="control-label">Supplier Name <span style="color:red">*</span></label>
+                                                        @Html.DropDownList("ddlSupplierName", (IEnumerable<SelectListItem>)ViewBag.ddlSupplierName, "--Select Supplier--", new { @class = "form-control form-control-sm ctrl-changed select2 select2-danger",autofocus="autofocus"})
                                                         <span class="error hide req-SupplierName font-weight-bold">Supplier Name is required!</span>
                                                     </div>
 
@@ -165,13 +165,13 @@
                                                     </div>
 
                                                     <div class="col-md-3">
-                                                        <label for="ddlChallanNo" class="control-label">Challan No.</label>
+                                                        <label for="ddlChallanNo" class="control-label">Challan No<span style="color:red">*</span></label>
                                                         <input type="text" id="ddlChallanNo" class="form-control form-control-sm" />
                                                         <span class="error hide req-ddlChallanNo font-weight-bold">Chalan No is required!</span>
 
                                                     </div>
                                                     <div class="col-md-3">
-                                                        <label for="ddlInvoiceNo" class="control-label">Invoice No.</label>
+                                                        <label for="ddlInvoiceNo" class="control-label">Invoice No<span style="color:red">*</span></label>
                                                         <input type="text" id="ddlInvoiceNo" class="form-control form-control-sm" />
                                                         <span class="error hide req-ddlInvoiceNo font-weight-bold">Invoice No is required!</span>
                                                     </div>
@@ -197,7 +197,7 @@
 
                                                         <div class="row">
                                                             <div class="col-md-2">
-                                                                <label class="control-label" for="ddlRawMaterial">RawMaterial</label>
+                                                                <label class="control-label" for="ddlRawMaterial">RawMaterial<span style="color:red">*</span></label>
                                                                 @Html.DropDownList("ddlRawMaterial", (IEnumerable<SelectListItem>)ViewBag.ddlRawMaterial, "--Select RawMaterial--", new { @class = "form-control form-control-sm ctrl-changed select2 select2-danger" })
                                                                 <span class="error hide req-ddlRawMaterial">RawMaterial Is Required</span>
                                                             </div>
@@ -216,12 +216,12 @@
                                                             </div>
 
                                                             <div class="col-md-1">
-                                                                <label for="ddluprice">Unit Price</label>
+                                                                <label for="ddluprice">Unit Price<span style="color:red">*</span></label>
                                                                 <input type="number" id="ddluprice" name="uprice" class="form-control form-control-sm" />
                                                                 <span class="error hide req-uprice">Unit Price Is Required</span>
                                                             </div>
-                                                            <div class="col-md-1">
-                                                                <label for="ddlqty"> Qty</label>
+                                                            <div class="col-md-2">
+                                                                <label for="ddlqty"> Qty<span style="color:red">*</span></label>
                                                                 <input type="number" id="ddlqty" name="qty" class="form-control form-control-sm" />
                                                                 <span class="error hide req-qty">Qty Is Required</span>
                                                             </div>
@@ -230,7 +230,7 @@
                                                                 <input type="number" id="ddlttprice" name="ddlttprice" class="form-control form-control-sm" readonly />
                                                             </div>
 
-                                                            <div class="col-md-2">
+                                                            <div class="col-md-1">
                                                                 <div class="form-group">
                                                                     <label for="ddlexpdate">Expire Date</label>
                                                                     <div class="input-group-sm date" id="datePicker">
@@ -244,7 +244,7 @@
                                                             </div>
 
 
-                                                            <div class="col-md-1">
+                                                            <div class="col-md-1" style="margin-left:-40px">
                                                                 <label for="" class="control-label font-weight-bold" style="visibility:hidden">Add</label>
                                                                 <div class="clearfix">
                                                                     <button type="submit" class="btn btn-sm float-right btn-outline-success" id="addTolist"><i class="fas fa-plus"></i></button>
@@ -422,11 +422,16 @@
         var today = new Date(date.getFullYear(), date.getMonth(), date.getDate());
 
         var optSimple = {
+            //format: 'mm-dd-yyyy',
+            //todayHighlight: true,
+            //orientation: 'bottom right',
+            //autoclose: true,
+            //container: '#sandbox'
             format: 'mm-dd-yyyy',
-            todayHighlight: true,
+            container: '#datePicker',
             orientation: 'bottom right',
-            autoclose: true,
-            container: '#sandbox'
+            todayHighlight: true,
+            autoclose: true
         };
 
         var optComponent = {
@@ -473,6 +478,7 @@
                 theme: 'bootstrap4'
             });
             $("#btnSubmit").hide();
+            $("#saveButton").hide();
 
 
             $(function () {
@@ -658,6 +664,7 @@
 
                 $("#tblPstockrawmaterial tbody").append(tr);
                 ddlRawMaterialList.push(ddlRawMaterial.val());
+                $("#saveButton").show();
 
                 }
                 clearCtrlStk();
