--- a/ERPWeb/Views/AgroConfiguration/GetProductFinishGoodList.cshtml
+++ b/ERPWeb/Views/AgroConfiguration/GetProductFinishGoodList.cshtml
@@ -100,13 +100,13 @@
             <span class="error hide req-ddlOrganiation">Organization is required</span>
         </div>*@
                                         <div class="col-md-3">
-                                            <label class="control-label" for="ddlProduct">Product</label>
-                                            @Html.DropDownList("ddlProduct", (IEnumerable<SelectListItem>)ViewBag.ddlProduct, "-Select Product-", new { @class = "form-control form-control-sm ctrl-changed select2 select2-danger" })
+                                            <label class="control-label" for="ddlProduct">Product<span style="color:red">*</span></label>
+                                            @Html.DropDownList("ddlProduct", (IEnumerable<SelectListItem>)ViewBag.ddlProduct, "-Select Product-", new { @class = "form-control form-control-sm ctrl-changed select2 select2-danger",autofocus ="autofocus" })
 
                                             <span class="error hide req-ddlProduct">Product Name is Required</span>
                                         </div>
                                         <div class="col-md-3">
-                                            <label class="control-label" for="ddlReceipBatchCode">Receip Code</label>
+                                            <label class="control-label" for="ddlReceipBatchCode">Recipe Code<span style="color:red">*</span></label>
                                             @Html.DropDownList("ddlReceipBatchCode", (IEnumerable<SelectListItem>)ViewBag.ddlReceipBatchCode, "--Select Batch--", new { @class = "form-control form-control-sm ctrl-changed select2 select2-danger" })
                                             <span class="error hide req-ddlReceipBatchCode">Batch Code Is Required</span>
                                         </div>
@@ -122,7 +122,7 @@
                                             <span class="error hide req-targetQty">Target Qty Is Required</span>
                                         </div>
                                         <div class="col-md-2">
-                                            <label for="FinishQty" class="control-label">Finish Qty</label>
+                                            <label for="FinishQty" class="control-label">Finish Qty<span style="color:red">*</span></label>
                                             <input type="number" id="FinishQty" class="form-control form-control-sm" />
                                             <span class="error hide req-FinishQty">Oty Over</span>
                                         </div>
@@ -211,12 +211,14 @@
             $('.select2bs4').select2({
                 theme: 'bootstrap4'
             });
+            $("#btnSubmit").hide();
             $("#addTolist").hide();
 
             //$("#btnSubmit").hide();
             $(function () {
                 $('#ddlProduct').focus();
             });
+            
        
         })
 
