--- a/ERPWeb/Views/AgroConfiguration/GetRawMaterial.cshtml
+++ b/ERPWeb/Views/AgroConfiguration/GetRawMaterial.cshtml
@@ -10,19 +10,26 @@
     <div class="col-md-12">
 
         <div class="row" style="margin-top:-15px">
-            <div class="col-md-12">
+            <div class="col-md-12"style="height:60px;text-align:center">
                 <div class="card card-navy">
                     <div class="card-header">
                         <div class="row text-sm">
+                            <div class="col-md-2">
+                                <h5 class=" text-bold float-left">
+                                    Raw Material Setup
+                                </h5>
+                            </div>
+                            <div class="col-md-2">
+
+                            </div>
                             <div class="col-md-3">
                                 @Html.DropDownList("ddlRawMaterial", (IEnumerable<SelectListItem>)ViewBag.ddlRawMaterial, "--Search by Material--", new { @class = "form-control ctrl-changed select2 setect2-danger" })
 
                             </div>
-                            <div class="col-md-6">
-                                <h5 class="text-center text-bold">
-                                    Raw Material Setup
-                                </h5>
+                            <div class="col-md-2">
+
                             </div>
+
                             <div class="col-md-3">
                                 <button class="btn btn-outline-warning btn-flat btn-sm float-right" id="btnAdd"><i class="fa fa-plus"></i>Add New Metarial</button>
 
@@ -72,7 +79,7 @@
                
 
                     <div class="col-md-12">
-                        <label class="control-label font-weight-bold">Raw Material Name</label>
+                        <label class="control-label font-weight-bold">Raw Material Name<span style="color:red">*</span></label>
                         <input type="text" id="rawMaterialName" class="form-control form-control-sm" />
                         <span class="error hide required-raqMaterialName">Material Name is Required</span>
 
