--- a/ERPWeb/Views/AgroConfiguration/SalesReturn.cshtml
+++ b/ERPWeb/Views/AgroConfiguration/SalesReturn.cshtml
@@ -51,7 +51,7 @@
                                 </div>*@
                             <div class="col-md-3">
                                 @*<label for="ddlInvoiceNo" class="col-form-label">Invoice No </label>*@
-                                @Html.DropDownList("ddlstokiestname", (IEnumerable<SelectListItem>)ViewBag.ddlstokiestname, "--Select Stokiest--", new { @class = "form-control form-control-sm ctrl-changed select2 select2-danger" })
+                                @Html.DropDownList("ddlstokiestname", (IEnumerable<SelectListItem>)ViewBag.ddlstokiestname, "--Select Stokiest--", new { @class = "form-control form-control-sm ctrl-changed select2 select2-danger",autofocus="autofocus" })
                             </div>
                             <div class="col-md-3">
                                 @*<label for="ddlInvoiceNo" class="col-form-label">Invoice No </label>*@
