--- a/ERPWeb/Views/AgroConfiguration/SaveRequisition.cshtml
+++ b/ERPWeb/Views/AgroConfiguration/SaveRequisition.cshtml
@@ -50,8 +50,8 @@
                                 <div class="row">
                                     <input type="text" id="hdrawMaterialRequisitionInfoId" class="hide" />
                                     <div class="col-md-2">
-                                        <label class="control-label" for="ddlRawMaterial">RawMaterial</label>
-                                        @Html.DropDownList("ddlRawMaterial", (IEnumerable<SelectListItem>)ViewBag.ddlRawMaterial, "--Select RawMaterial--", new { @class = "form-control form-control-sm ctrl-changed select2 select2-danger" })
+                                        <label class="control-label" for="ddlRawMaterial">RawMaterial<span style="color:red">*</span></label>
+                                        @Html.DropDownList("ddlRawMaterial", (IEnumerable<SelectListItem>)ViewBag.ddlRawMaterial, "--Select RawMaterial--", new { @class = "form-control form-control-sm ctrl-changed select2 select2-danger",autofocus="autofocus" })
                                         <span class="error hide req-ddlRawMaterial">RawMaterial Is Required</span>
                                     </div>
 
@@ -65,7 +65,7 @@
                                     </div>
 
                                     <div class="col-md-2">
-                                        <label for="requistionQuantity">Requisition Qty</label>
+                                        <label for="requistionQuantity">Requisition Qty<span style="color:red">*</span></label>
                                         <input type="number" id="numRequisitonQuantity" name="requistionQuantity" class="form-control form-control-sm" />
                                         <span class="error hide req-qty">Qty Is Required</span>
                                         @*<span id="spanRawMaterialStockQty">Stock: <span id="RawMaterialStockQty">0</span> </span>*@
@@ -146,13 +146,13 @@
                                     <input type="hidden" id="hdTargetValue" />
                                     <input type="hidden" id="hdQuantity" />
                                     <div class="col-md-3">
-                                        <label class="control-label" for="ddlProduct">Product</label>
+                                        <label class="control-label" for="ddlProduct">Product<span style="color:red">*</span></label>
                                         @Html.DropDownList("ddlProduct", (IEnumerable<SelectListItem>)ViewBag.ddlProduct, "-Select Product-", new { @class = "form-control form-control-sm ctrl-changed select2 select2-danger" })
 
                                         <span class="error hide req-ddlProduct">Product Name is Required</span>
                                     </div>
                                     <div class="col-md-3">
-                                        <label class="control-label" for="ddlReceipBatchCode">Receip Code</label>
+                                        <label class="control-label" for="ddlReceipBatchCode">Recipe Code<span style="color:red">*</span></label>
                                         @Html.DropDownList("ddlReceipBatchCode", (IEnumerable<SelectListItem>)ViewBag.ddlReceipBatchCode, "--Select Batch--", new { @class = "form-control form-control-sm ctrl-changed select2 select2-danger" })
                                         <span class="error hide req-ddlReceipBatchCode">Batch Code Is Required</span>
                                     </div>
@@ -163,7 +163,7 @@
 
                                     </div>
                                     <div class="col-md-2">
-                                        <label for="targetQty" class="control-label"> Target Qty</label>
+                                        <label for="targetQty" class="control-label"> Target Qty<span style="color:red">*</span></label>
                                         <input type="number" id="targetQty" class="form-control form-control-sm" />
                                         <span class="error hide req-targetQty">Target Qty Is Required</span>
                                     </div>
