--- a/ERPWeb/Views/AgroConfiguration/_GetMeasurementList.cshtml
+++ b/ERPWeb/Views/AgroConfiguration/_GetMeasurementList.cshtml
@@ -6,12 +6,12 @@
     <table class="table table-bordered table-sm table-striped table-responsive-lg text-sm">
         <thead class="btn-dark">
             <tr class="text-center text-bold">
-                <th>SL</th>
-                <th>MeasureMent Name</th>
-                <th>MeasureMent Item</th>
-                <th>UnitName</th>
-                <th>Status</th>
-                <td>Action</td>
+                <th style="vertical-align:middle">SL</th>
+                <th style="vertical-align:middle">MeasureMent Name</th>
+                <th style="vertical-align:middle">MeasureMent Item</th>
+                <th style="vertical-align:middle">UnitName</th>
+                <th style="vertical-align:middle">Status</th>
+                <th style="vertical-align:middle">Action</th>
             </tr>
         </thead>
         <tbody>
@@ -34,7 +34,7 @@
                 <td class="text-center">@item.Status</td>
                 <td class="hide">@item.UnitKG</td>
                 <td class="text-center">
-                    <a href="#" class="btn btn-warning btn-sm data-edit-item-measurement" data-edit-item-measurement="@item.MeasurementId"><i class="fa fa-pen"></i>Edit</a>
+                    <a href="#" class="btn btn-warning btn-sm data-edit-item-measurement" style="line-height:1" data-edit-item-measurement="@item.MeasurementId"><i class="fa fa-pen"></i>Edit</a>
                 </td>
 
             </tr>
