--- a/ERPWeb/Views/AgroConfiguration/_GetRawMaterial.cshtml
+++ b/ERPWeb/Views/AgroConfiguration/_GetRawMaterial.cshtml
@@ -12,7 +12,7 @@
                 @*<th>Organization name</th>*@
                 @*<th>Depot Name</th>*@
                 <th>Raw Material</th>
-                <th>UnitName</th>
+                <th>Unit Name</th>
                 <th>Status</th>
                 @*<th>Expire Date</th>*@
                 <th class="hide">organizationId</th>
@@ -29,18 +29,19 @@
             <tr>
 
                 <td class="hide">@raw.RawMaterialId</td>
-                <td>@sl</td>
+                <td class="text-center text-bold">@sl</td>
                 @*<td class="hide">@raw.DepotId</td>*@
-                <td class="hide">@raw.OrganizationName</td>
+                <td class="text-center hide">@raw.OrganizationName</td>
                 @*<td>@raw.DepotName</td>*@
-                <td>@raw.RawMaterialName</td>
-                <td>@raw.UnitName</td>
-                <td>@raw.Status</td>
+                <td class="text-center">@raw.RawMaterialName</td>
+                <td class="text-center">@raw.UnitName</td>
+                <td class="text-center">@raw.Status</td>
                 @*<td>@raw.ExpireDate.Value.ToShortDateString()</td>*@
-                <td class="hide">@raw.OrganizationId</td>
-                <td class="hide">@raw.UnitId</td>
-                <td>
-                    <a href="#" class="btn btn-warning btn-sm data-edit-item-rawMaterialId" data-edit-item-rawMaterialId="@raw.RawMaterialId"><i class="fa fa-pen"></i>Edit</a>
+                <td class="text-center hide">@raw.OrganizationId</td>
+                <td class="text-center hide">@raw.UnitId</td>
+                <td class="text-center">
+                    <a href="#" class="btn btn-warning btn-sm data-edit-item-rawMaterialId" style="line-height:1" data-edit-item-rawMaterialId="@raw.RawMaterialId"><i class="fa fa-pen"></i>Edit</a>
+                    
                 </td>
             </tr>
 
